force-app/main/default/objects/Canned_Job_Line_Item__c/Canned_Job_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Child object for Canned Job.</description>
    <label>Canned Job Line Item</label>
    <nameField>
        <displayFormat>Canned JLI -{0000}</displayFormat>
        <label>Canned Job Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canned Job Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>