force-app/main/default/objects/Canned_Job_Line_Item__c/fields/Related_to_Canned_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Canned_Job__c</fullName>
    <label>Related to Canned Job</label>
    <referenceTo>Canned_Job__c</referenceTo>
    <relationshipLabel>Canned Job Line Items</relationshipLabel>
    <relationshipName>Canned_Job_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>